--- a/MyTest/pom.xml
+++ b/MyTest/pom.xml
@@ -58,6 +58,14 @@
         <version>3.8.1</version>
     </dependency> 
     
+    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+	<dependency>
+    	<groupId>com.relevantcodes</groupId>
+    	<artifactId>extentreports</artifactId>
+    	<version>2.41.2</version>
+	</dependency>
+    
+    
     
 </dependencies>
 
